🩹 Fix unnecessary scrollbars on desktop devices

--- a/src/app/(app)/connections/layout.module.scss
+++ b/src/app/(app)/connections/layout.module.scss
@@ -6,7 +6,7 @@
 
   block-size: calc(100dvb - 7.3rem);
   padding: $whitespace-7 $whitespace-6;
-  overflow: scroll;
+  overflow: auto;
   scrollbar-gutter: auto;
   overscroll-behavior: auto;
   background-color: $color-neutral-1;
