--- a/src/app/(app)/search/page.module.scss
+++ b/src/app/(app)/search/page.module.scss
@@ -6,7 +6,7 @@
 
   flex: 1;
   block-size: 73.5rem;
-  overflow: scroll;
+  overflow: auto;
   scrollbar-gutter: auto;
   overscroll-behavior: auto;
 }
