--- a/src/components/NearbyProfilesList/NearbyProfilesList.module.scss
+++ b/src/components/NearbyProfilesList/NearbyProfilesList.module.scss
@@ -10,7 +10,7 @@
   z-index: 1000;
   block-size: 28rem;
   padding: $whitespace-6 $whitespace-5;
-  overflow: scroll;
+  overflow: auto;
   background-color: $color-neutral-1;
   border-start-start-radius: $border-radius-large;
   border-start-end-radius: $border-radius-large;
