--- a/src/components/ProfileReviews/ProfileReviews.module.scss
+++ b/src/components/ProfileReviews/ProfileReviews.module.scss
@@ -6,7 +6,7 @@
   max-inline-size: 40rem;
   max-block-size: 55rem;
   padding: $whitespace-6;
-  overflow: scroll;
+  overflow: auto;
   scrollbar-gutter: auto;
   overscroll-behavior: auto;
   background-color: $color-neutral-1;
