--- a/src/components/RequestsList/RequestsList.module.scss
+++ b/src/components/RequestsList/RequestsList.module.scss
@@ -31,7 +31,7 @@
     @include flex-shorthand(column, nowrap, $whitespace-7, center);
 
     flex: 1;
-    overflow: scroll;
+    overflow: auto;
     scrollbar-gutter: auto;
     overscroll-behavior: auto;
   }
