--- a/src/components/SearchFilter/SearchFilter.module.scss
+++ b/src/components/SearchFilter/SearchFilter.module.scss
@@ -44,7 +44,7 @@
     block-size: 90%;
     padding: $whitespace-6 $whitespace-4 calc($whitespace-6 + 7.3rem)
       $whitespace-4;
-    overflow: scroll;
+    overflow: auto;
     scrollbar-gutter: auto;
     overscroll-behavior: auto;
     background-color: $color-neutral-1;
